# whatsapp-greetings

./: Dockerfile  README.md  docker-compose.yml  entity.py  main.py  pyproject.toml  settings.py  start_app.py
application/: application.py  container.py  routers.py
clients/: whatsapp_client.py
logic/: congratulator.py  data_loader.py
models/: person_model.py
persistance/: mongo_connection.py  people_repository.py  repository.py
settings/: settings.py
