[tool.poetry]
name = "whatsapp-greetings"
version = "0.1.0"
description = ""
authors = ["oyzybareva <oyzybareva@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.108.0"
whatsapp-api-client-python = "^0.0.44"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
motor = "^3.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
